--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,7 @@
     justify-content: center;
 } */
 body{
-    /* background-color: beige; */
-    background-color: rgb(164, 240, 236);
+    background-color: beige;
 }
 
 .header{
